<resources>
    <string name="app_name">CoffeeAlarmClock</string>

    <string name="action_settings">Настройки</string>
    <string name="mon">ПН</string>
    <string name="tue">ВТ</string>
    <string name="wed">СР</string>
    <string name="thu">ЧТ</string>
    <string name="fri">ПТ</string>
    <string name="sat">СБ</string>
    <string name="sun">ВС</string>
    <string name="nextAlarm">До будильника: </string>
    <string name="work">Работа</string>

<!-- Настройки-->

    <string name="title_notification">Уведомление</string>
    <string name="summary_notification">Отображать уведоление о следующем будильнике в статус баре</string>
    <string name="title_icon_notification">Иконка уведомления</string>
    <string name="title_appearance">Внешний вид</string>
    <string name="title_display_brightness">Яркость экрана будильника</string>
    <string name="title_buttons_dimensions">Размеры кнопок Отложить и Отключить</string>
    <string name="title_screen_orientation">Ориентация экрана</string>
    <string name="title_alarm_template">Шаблон будильника</string>
    <string name="title_regional_settings">Региональные настройки</string>
    <string name="title_language">Язык</string>
    <string name="title_time_format">Формат времени</string>
    <string name="title_week_beginning">Начало недели</string>
    <string name="preference">Назад</string>
    <string name="back"><![CDATA[<]]></string>
    <string name="yes">Ок</string>
    <string name="no">Отмена</string>
    <string name="alarm_label"><u>Заголовок</u></string>
    <string name="alarm_time"><u>Время</u></string>
    <string name="alarm_repeat"><u>Повтор</u></string>
    <string name="alarm_type_signal"><u>Тип сигнала</u></string>
    <string name="alarm_select_signal"><u>Выбрать</u></string>
    <string name="alarm_vibrate"><u>Вибрация</u></string>
    <string name="alarm_volume"><u>Громкость</u></string>
    <string name="alarm_increase_volume"><u>Наростание громкости</u></string>
    <string name="save">Сохранить</string>
    <string name="cancel">Отмена</string>
    <string name="delete_settings">Удалить</string>
    <string name="title_activity_alarm">AlarmActivity</string>

    <string name="hello_world">Hello world!</string>


</resources>
