<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:id="@+id/fragment_time">

    <com.neirx.app.coffeealarmclock.CustomDigitalClock
        android:id="@+id/dgClock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:textSize="60dp"
        android:textColor="#e5d4ac"
        style="@style/BeigeText"/>

    <ImageView
        android:id="@+id/imgAlarm"
        android:layout_width="15dp"
        android:layout_height="17dp"
        android:layout_below="@id/dgClock"/>
    <TextView
        android:id="@+id/textAlarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dgClock"
        android:layout_toRightOf="@id/imgAlarm"/>

    <TextView
        android:id="@+id/tvThu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/imgAlarm"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/thu"
        android:textStyle="bold"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        style="@style/BeigeText"/>
    <TextView
        android:id="@+id/tvWed"
        android:layout_margin="0dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgAlarm"
        android:layout_toLeftOf="@id/tvThu"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/wed"
        android:textStyle="bold"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        style="@style/BeigeText"/>
    <TextView
        android:id="@+id/tvTue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgAlarm"
        android:layout_toLeftOf="@id/tvWed"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tue"
        android:textStyle="bold"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        style="@style/BeigeText"/>
    <TextView
        android:id="@+id/tvMon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgAlarm"
        android:layout_toLeftOf="@id/tvTue"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/mon"
        android:textStyle="bold"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        style="@style/BeigeText"/>
    <TextView
        android:id="@+id/tvFri"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgAlarm"
        android:layout_toRightOf="@id/tvThu"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/fri"
        android:textStyle="bold"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        style="@style/BeigeText"/>
    <TextView
        android:id="@+id/tvSat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgAlarm"
        android:layout_toRightOf="@id/tvFri"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/sat"
        android:textStyle="bold"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        style="@style/BeigeText"/>
    <TextView
        android:id="@+id/tvSun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgAlarm"
        android:layout_toRightOf="@id/tvSat"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/sun"
        android:textStyle="bold"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        style="@style/BeigeText"/>

    <TextView
        android:id="@+id/nextAlarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvThu"
        android:layout_centerHorizontal="true"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/nextAlarm"
        android:textStyle="italic"
        android:paddingTop="4dp"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        style="@style/BeigeText"/>
</RelativeLayout>
