<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/topLayout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="10">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="10">
        <View
            android:id="@+id/center_line"
            android:layout_width="1dp"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/pale_beige"/>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/center_line">
            <ImageView
                android:src="@drawable/menu_alarm_on"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@id/center_line">
            <ImageView
                android:src="@drawable/menu_graph_off"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"/>
        </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2">

        <com.neirx.app.coffeealarmclock.CustomDigitalClock
            android:id="@+id/dgClock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="0dp"
            android:textSize="60dp"
            android:textColor="#e5d4ac"
            style="@style/BeigeText"/>

        <ImageView
            android:id="@+id/imgAlarm"
            android:layout_width="15dp"
            android:layout_height="17dp"
            android:layout_below="@id/dgClock"/>
        <TextView
            android:id="@+id/textAlarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/dgClock"
            android:layout_toRightOf="@id/imgAlarm"/>

        <TextView
            android:id="@+id/tvThu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/imgAlarm"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/thu"
            android:textStyle="bold"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            style="@style/BeigeText"/>
        <TextView
            android:id="@+id/tvWed"
            android:layout_margin="0dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imgAlarm"
            android:layout_toLeftOf="@id/tvThu"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/wed"
            android:textStyle="bold"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            style="@style/BeigeText"/>
        <TextView
            android:id="@+id/tvTue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imgAlarm"
            android:layout_toLeftOf="@id/tvWed"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/tue"
            android:textStyle="bold"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            style="@style/BeigeText"/>
        <TextView
            android:id="@+id/tvMon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imgAlarm"
            android:layout_toLeftOf="@id/tvTue"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/mon"
            android:textStyle="bold"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            style="@style/BeigeText"/>
        <TextView
            android:id="@+id/tvFri"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imgAlarm"
            android:layout_toRightOf="@id/tvThu"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/fri"
            android:textStyle="bold"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            style="@style/BeigeText"/>
        <TextView
            android:id="@+id/tvSat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imgAlarm"
            android:layout_toRightOf="@id/tvFri"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/sat"
            android:textStyle="bold"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            style="@style/BeigeText"/>
        <TextView
            android:id="@+id/tvSun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imgAlarm"
            android:layout_toRightOf="@id/tvSat"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/sun"
            android:textStyle="bold"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            style="@style/BeigeText"/>

        <TextView
            android:id="@+id/nextAlarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvThu"
            android:layout_centerHorizontal="true"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/nextAlarm"
            android:textStyle="italic"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            style="@style/BeigeText"/>
        <View
            android:id="@+id/topLine"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/beige"
            android:layout_below="@id/nextAlarm"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>



        <View
            android:id="@+id/bottomLine"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/beige"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="1dp"/>

        <RelativeLayout
            android:id="@+id/alarmLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/topLine"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/bg_alarm"
                    android:gravity="center_vertical"
                    android:layout_margin="3dp">
                    <ImageView
                        android:id="@+id/alarmStatus"
                        android:layout_alignParentRight="true"
                        android:src="@drawable/alarm_on"
                        android:background="@drawable/alarm_on"
                        android:layout_width="37dp"
                        android:layout_height="33dp"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="10dp"/>
                    <LinearLayout
                        android:layout_toLeftOf="@id/alarmStatus"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="center">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="6:30"
                            android:textSize="33dp"
                            style="@style/DarkText"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Ежедневно"
                            android:textSize="15dp"
                            style="@style/DarkText"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/work"
                            android:textSize="17dp"
                            android:textStyle="italic"
                            style="@style/DarkText"/>
                    </LinearLayout>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/bg_alarm"
                    android:gravity="center_vertical"
                    android:layout_margin="3dp">
                    <ImageView
                        android:layout_alignParentLeft="true"
                        android:id="@+id/alarmStatus2"
                        android:src="@drawable/alarm_on"
                        android:background="@drawable/alarm_on"
                        android:layout_width="37dp"
                        android:layout_height="33dp"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"/>
                    <LinearLayout
                        android:layout_toRightOf="@id/alarmStatus2"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="6:30"
                            android:textSize="33dp"
                            style="@style/DarkText"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Ежедневно"
                            android:textSize="15dp"
                            style="@style/DarkText"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/work"
                            android:textSize="17dp"
                            android:textStyle="italic"
                            style="@style/DarkText"/>
                    </LinearLayout>
                </RelativeLayout>
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>



    <LinearLayout
        android:id="@+id/bottomLayout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_weight="10"/>

</LinearLayout>
